Fix markers disappearing on mobile
Fix marker overlay being removed when navigating on mobile

--- a/src/scss/0-899.scss
+++ b/src/scss/0-899.scss
@@ -10,7 +10,7 @@
 }
 
 #map {
-    display: none;
+    visibility: hidden;
     position: fixed !important;
     top: 0;
     height: 100%;
@@ -18,7 +18,7 @@
     transition: height 150ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &.active {
-        display: block;
+        visibility: visible;
     }
 
     &.nav-show {
